# GRTCODE

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Guide.md  Makefile  Makefile-gpu  Makefile-host  Makefile.am  Makefile.gnu  Makefile.mpi  Makefile.mpi.lsrgpu01  Makefile.mpi.theia  Makefile.port  Makefile.theia  README.md  TIPS_2011.c  TIPS_2011.h  build.sh  configure.ac  continuum.c  continuum.h  cuda.mk  cudaHelpers.cu  cudaHelpers.cuh  download-test-data  gaea-build  grtcode.c  grtcode.h  myreal.h  outputNetcdfSpec.c  outputNetcdfSpec.h  parseHITRANfile.c  parseHITRANfile.h  parseNetcdfRadiation.c  parseNetcdfRadiation.h  voigt.c  voigt.h
GRTworkflow/: .run-rfmip-irf.sh.swp  build.sh  combine.sh  combiner.py  comine_multiple.sh  environment.sh  foo  foobar  grtcode-results-combiner  grtcode-results-combiner.c  integrate_broadband.py  run-era5.sh  run-era5_test.sh  run-rfmip-irf.sh  submit.sh  xbuild.sh
INPUT/: AllForc_jan21981rad_19820103met.atmos_rfm.nc.NOTE  mls.nc  singleCol.nc  smallSubset_2t.nc
circ/src/: Makefile.am  atmosphere.c  atmosphere.h  basic-circ-test.c  circ.c  circ.h  circ1.h
circ/test/: Makefile.am  check_results.c  test-basic-circ  test_circ
cloud-optics/src/: Makefile.am  cloud_optics.c  cloud_optics.h  hu_stamnes_1993_tables.h  slingo_1989_tables.h
clouds/: cloud_optics.c  cloud_optics.h  cloud_pade_optics.c  cloud_pade_optics.h  cloud_utils.c  cloud_utils.h  clouds_lib.c  clouds_lib.h  hu_stamnes.c  hu_stamnes.h  ice_cloud_optics.c  ice_cloud_optics.h  incomplete_beta.c  incomplete_beta.h  liquid_cloud_optics.c  liquid_cloud_optics.h  netcdf_utils.c  netcdf_utils.h  optics_utils.c  optics_utils.h  stochastic_clouds.c  stochastic_clouds.h  test.c
continuum/: 296MTCKD25_F.ccf  296MTCKD25_S.ccf  CKDF.ppp  CKDS.ppp
docs/: doxyfile
era5/src/: Makefile.am  era5.c  era5.h
era5/test/: combine-segments.py  run_year  test_era5
example_envs/: gbw.gfdl.cshrc  gbw.theia.cshrc  gfdl.cshrc  lsrgpu01.gfdl.bashrc
extra-tools/: grtcode-results-combiner.c
fortran-bindings/: Makefile.am  grtcode_fortran.F90  malloc_structs.c
framework/src/: Makefile.am  distribute.c  distribute.h  driver.c  driver.h
gas-optics/src/: Makefile.am  RFM_voigt.c  RFM_voigt.h  cfcs-internal.h  cfcs.c  cfcs.h  collision_induced_absorption-internal.h  collision_induced_absorption.c  collision_induced_absorption.h  cuda_kernels.c  cuda_kernels.cuh  gas_optics.c  gas_optics.h  kernel_utils.c  kernel_utils.h  kernels.c  kernels.h  launch.c  launch.h  line_shape.h  molecules-internal.h  molecules.c  molecules.h  ozone_continuum-internal.h  ozone_continuum.c  ozone_continuum.h  parse_HITRAN_file-internal.h  parse_HITRAN_file.c  parse_HITRAN_file.h  spectral_bin-internal.h  spectral_bin.c  spectral_bin.h  tips2017.h  water_vapor_continuum-internal.h  water_vapor_continuum.c  water_vapor_continuum.h
gas-optics/test/: launch.c  test_RFM_voigt.c  test_cfcs.c  test_collision_induced_absorption.c  test_gas_optics.c  test_kernel_utils.c  test_kernels.c  test_molecules.c  test_ozone_continuum.c  test_parse_HITRAN_file.c  test_spectral_bin.c  test_tips2017.c  test_water_vapor_continuum.c
longwave/src/: Makefile.am  longwave.c  longwave.h
longwave/test/: Makefile.am  test_longwave.c
misc_utils/: loadSpcToNc_revZ.py  someNetcdfTool.notes
rfmip-irf/src/: Makefile.am  atmosphere.c  atmosphere.h  rfmip-irf.c  rfmip-irf.h
rfmip-irf/test/: Makefile.am  check_results.c  test_rfmip_irf
shortwave/src/: Makefile.am  disort_shortwave.c  disort_shortwave.h  rayleigh.c  rayleigh.h  shortwave.c  shortwave.h  solar_flux.c  solar_flux.h
shortwave/test/: Makefile.am  test_shortwave.c
testing_harness/src/: circ1.h  test_harness.c  test_harness.h
utilities/src/: Makefile.am  argparse.c  argparse.h  curtis_godson.c  curtis_godson.h  debug.h  device.c  device.h  extern.h  floating_point_type.h  grtcode_config.h  grtcode_utilities.h  optics.c  optics.h  parse_csv.c  parse_csv.h  return_codes.h  spectral_grid.c  spectral_grid.h  utilities.c  utilities.h  verbosity-internal.h  verbosity.c  verbosity.h
utilities/test/: test_argparse.c  test_curtis_godson.c  test_device.c  test_optics.c  test_parse_csv.c  test_spectral_grid.c  test_utilities.c  test_verbosity.c
